syntax = "proto3";

package book_store.books_service;

import "books_messages.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Surya-7890/book_store/proto/gen";

service Books {
    rpc GetBooks(GetBooksRequest) returns (GetBooksResponse) {
        option(google.api.http) = {
            get: "/v1/books";
        };
    } 

    rpc GetBook(GetBookRequest) returns (GetBookResponse) {
        option(google.api.http) = {
            get: "/v1/book/{id}";
        };
    } 
}

service ModifyBooks {
    rpc NewBook(NewBookRequest) returns (NewBookResponse) {
        option(google.api.http) = {
            post: "/v1/books";
            body: "*";
        };
    }

    rpc UpdateBooks(UpdateBookRequest) returns (UpdateBookResponse) {
        option(google.api.http) = {
            patch: "/v1/books";
            body: "*";
        };
    }

    rpc DeleteBooks(DeleteBookRequest) returns (DeleteBookResponse) {
        option(google.api.http) = {
            delete: "/v1/books/{id}";
        };
    }
}
